faq spacing and fixed lab link on index page

--- a/src/components/FAQ/faq.css
+++ b/src/components/FAQ/faq.css
@@ -53,6 +53,7 @@
     color: #FFF5D9;
     font-weight: 400;
     font-size: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .faq-ques {
@@ -63,6 +64,7 @@
     font-size: 18px;
     margin: 0.5rem;
     border-style: solid;
+    margin-bottom: 1.5rem;
 }
 
 .faq-list {
